--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,9 @@ body {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+  width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .container {
@@ -73,6 +76,13 @@ body {
 }
 
 /* HEADER */
+
+.header {
+  width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
+  border-bottom: 1px solid #ececec;
+}
 
 .head.container {
   display: flex;
@@ -159,6 +169,9 @@ body {
 /* HERO */
 
 .hero {
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   background-color: var(--banner-background-color);
 }
@@ -203,8 +216,6 @@ body {
 
 .section.value {
   padding-bottom: 0;
-
-  background-color: var(--main-background-color);
 }
 
 .value-list .title {
@@ -225,10 +236,6 @@ body {
 }
 
 /* LABOURS */
-
-.labour.section {
-  background-color: var(--main-background-color);
-}
 
 .labour-list {
   display: flex;
@@ -286,6 +293,9 @@ body {
 /*  FOOTER */
 
 .foot {
+  width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
   background-color: var(--banner-background-color);
 }
 
