--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --secondary-background-color: #f5f4fa;
   --white-color: #ffffff;
   --banner-background-color: #2f303a;
+  --black-color: #000000;
 }
 
 /* RESET */
@@ -36,6 +37,9 @@ img {
 /*  COMMON STYLES */
 
 body {
+  max-width: 1600px;
+  margin: 0 auto;
+
   color: var(--main-text-color);
   font-family: 'Roboto', sans-serif;
 }
@@ -43,9 +47,6 @@ body {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
-  width: 1600px;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 .container {
@@ -78,9 +79,6 @@ body {
 /* HEADER */
 
 .header {
-  width: 1600px;
-  margin-right: auto;
-  margin-left: auto;
   border-bottom: 1px solid #ececec;
 }
 
@@ -99,14 +97,11 @@ body {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-}
-
-.logo .web {
   color: var(--accent-color);
 }
 
 .logo .studio {
-  color: #000000;
+  color: var(--black-color);
 }
 
 /*  MAIN NAVIGATION */
@@ -155,6 +150,10 @@ body {
 }
 
 .contacts .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -169,14 +168,19 @@ body {
 /* HERO */
 
 .hero {
-  width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
+  padding-top: 200px;
+  padding-bottom: 200px;
+
   text-align: center;
   background-color: var(--banner-background-color);
 }
 
 .hero .title {
+  width: 696px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 30px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -186,8 +190,8 @@ body {
 }
 
 .hero-button {
-  width: 216px;
-  height: 50px;
+  padding: 10px 32px;
+  border: 0;
   border-radius: 4px;
 
   font-family: inherit;
@@ -199,7 +203,7 @@ body {
 
   color: var(--white-color);
   background-color: var(--accent-color);
-  border-color: transparent;
+  /* border-color: transparent; */
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
